# statusbar

./: CMakeLists.txt  README.md
etc/statusbar/: status.sh
include/statusbar/: EventFilter.h  main.h
src/: main.cpp
